BabyDuck/ANTLR/BabyDuckParser.py
# Generated from BabyDuck.g4 by ANTLR 4.13.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class BabyDuckParser ( Parser ):

    grammarFileName = "BabyDuck.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'programa'", "'inicio'", "'fin'", "'devolver'", 
                     "'vars'", "'entero'", "'flotante'", "'si'", "'sino'", 
                     "'escribe'", "'mientras'", "'haz'", "'nula'", "'('", 
                     "')'", "'['", "']'", "'{'", "'}'", "';'", "':'", "','", 
                     "'='", "'+'", "'-'", "'*'", "'/'", "'>'", "'<'", "'!='", 
                     "'=='" ]

    symbolicNames = [ "<INVALID>", "PROGRAMA", "INICIO", "FIN", "DEVOLVER", 
                      "VARS", "ENTERO", "FLOTANTE", "SI", "SINO", "ESCRIBE", 
                      "MIENTRAS", "HAZ", "NULA", "PARENTESIS_IZQUIERDO", 
                      "PARENTESIS_DERECHO", "CORCHETE_IZQUIERDO", "CORCHETE_DERECHO", 
                      "LLAVE_IZQUIERDA", "LLAVE_DERECHA", "PUNTO_Y_COMA", 
                      "DOS_PUNTOS", "COMA", "ASIGNACION", "MAS", "MENOS", 
                      "MULTIPLICACION", "DIVISION", "MAYOR_QUE", "MENOR_QUE", 
                      "DIFERENTE_DE", "IGUAL_QUE", "ID", "CTE_ENT", "CTE_FLOT", 
                      "LETRERO", "ESPACIOS" ]

    RULE_programa = 0
    RULE_vars = 1
    RULE_declarar_variables = 2
    RULE_declarar_ids = 3
    RULE_funcs = 4
    RULE_parametros = 5
    RULE_cuerpo = 6
    RULE_tipo = 7
    RULE_devuelve = 8
    RULE_estatuto = 9
    RULE_continuacion_de_estatuto_id = 10
    RULE_condicion = 11
    RULE_ciclo = 12
    RULE_imprime = 13
    RULE_imprimir_elementos = 14
    RULE_expresion = 15
    RULE_exp = 16
    RULE_termino = 17
    RULE_factor = 18
    RULE_dato_o_llamada = 19
    RULE_cte = 20

    ruleNames =  [ "programa", "vars", "declarar_variables", "declarar_ids", 
                   "funcs", "parametros", "cuerpo", "tipo", "devuelve", 
                   "estatuto", "continuacion_de_estatuto_id", "condicion", 
                   "ciclo", "imprime", "imprimir_elementos", "expresion", 
                   "exp", "termino", "factor", "dato_o_llamada", "cte" ]

    EOF = Token.EOF
    PROGRAMA=1
    INICIO=2
    FIN=3
    DEVOLVER=4
    VARS=5
    ENTERO=6
    FLOTANTE=7
    SI=8
    SINO=9
    ESCRIBE=10
    MIENTRAS=11
    HAZ=12
    NULA=13
    PARENTESIS_IZQUIERDO=14
    PARENTESIS_DERECHO=15
    CORCHETE_IZQUIERDO=16
    CORCHETE_DERECHO=17
    LLAVE_IZQUIERDA=18
    LLAVE_DERECHA=19
    PUNTO_Y_COMA=20
    DOS_PUNTOS=21
    COMA=22
    ASIGNACION=23
    MAS=24
    MENOS=25
    MULTIPLICACION=26
    DIVISION=27
    MAYOR_QUE=28
    MENOR_QUE=29
    DIFERENTE_DE=30
    IGUAL_QUE=31
    ID=32
    CTE_ENT=33
    CTE_FLOT=34
    LETRERO=35
    ESPACIOS=36

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramaContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def PROGRAMA(self):
            return self.getToken(BabyDuckParser.PROGRAMA, 0)

        def ID(self):
            return self.getToken(BabyDuckParser.ID, 0)

        def PUNTO_Y_COMA(self):
            return self.getToken(BabyDuckParser.PUNTO_Y_COMA, 0)

        def INICIO(self):
            return self.getToken(BabyDuckParser.INICIO, 0)

        def cuerpo(self):
            return self.getTypedRuleContext(BabyDuckParser.CuerpoContext,0)


        def FIN(self):
            return self.getToken(BabyDuckParser.FIN, 0)

        def vars_(self):
            return self.getTypedRuleContext(BabyDuckParser.VarsContext,0)


        def funcs(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(BabyDuckParser.FuncsContext)
            else:
                return self.getTypedRuleContext(BabyDuckParser.FuncsContext,i)


        def getRuleIndex(self):
            return BabyDuckParser.RULE_programa

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPrograma" ):
                listener.enterPrograma(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPrograma" ):
                listener.exitPrograma(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPrograma" ):
                return visitor.visitPrograma(self)
            else:
                return visitor.visitChildren(self)




    def programa(self):

        localctx = BabyDuckParser.ProgramaContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_programa)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 42
            self.match(BabyDuckParser.PROGRAMA)
            self.state = 43
            self.match(BabyDuckParser.ID)
            self.state = 44
            self.match(BabyDuckParser.PUNTO_Y_COMA)
            self.state = 46
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==5:
                self.state = 45
                self.vars_()


            self.state = 51
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 8384) != 0):
                self.state = 48
                self.funcs()
                self.state = 53
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 54
            self.match(BabyDuckParser.INICIO)
            self.state = 55
            self.cuerpo()
            self.state = 56
            self.match(BabyDuckParser.FIN)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class VarsContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def VARS(self):
            return self.getToken(BabyDuckParser.VARS, 0)

        def declarar_variables(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(BabyDuckParser.Declarar_variablesContext)
            else:
                return self.getTypedRuleContext(BabyDuckParser.Declarar_variablesContext,i)


        def getRuleIndex(self):
            return BabyDuckParser.RULE_vars

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVars" ):
                listener.enterVars(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVars" ):
                listener.exitVars(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVars" ):
                return visitor.visitVars(self)
            else:
                return visitor.visitChildren(self)




    def vars_(self):

        localctx = BabyDuckParser.VarsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_vars)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 58
            self.match(BabyDuckParser.VARS)
            self.state = 60 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 59
                self.declarar_variables()
                self.state = 62 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==32):
                    break

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Declarar_variablesContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def declarar_ids(self):
            return self.getTypedRuleContext(BabyDuckParser.Declarar_idsContext,0)


        def DOS_PUNTOS(self):
            return self.getToken(BabyDuckParser.DOS_PUNTOS, 0)

        def tipo(self):
            return self.getTypedRuleContext(BabyDuckParser.TipoContext,0)


        def PUNTO_Y_COMA(self):
            return self.getToken(BabyDuckParser.PUNTO_Y_COMA, 0)

        def getRuleIndex(self):
            return BabyDuckParser.RULE_declarar_variables

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDeclarar_variables" ):
                listener.enterDeclarar_variables(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDeclarar_variables" ):
                listener.exitDeclarar_variables(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDeclarar_variables" ):
                return visitor.visitDeclarar_variables(self)
            else:
                return visitor.visitChildren(self)




    def declarar_variables(self):

        localctx = BabyDuckParser.Declarar_variablesContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_declarar_variables)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 64
            self.declarar_ids()
            self.state = 65
            self.match(BabyDuckParser.DOS_PUNTOS)
            self.state = 66
            self.tipo()
            self.state = 67
            self.match(BabyDuckParser.PUNTO_Y_COMA)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Declarar_idsContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self, i:int=None):
            if i is None:
                return self.getTokens(BabyDuckParser.ID)
            else:
                return self.getToken(BabyDuckParser.ID, i)

        def COMA(self, i:int=None):
            if i is None:
                return self.getTokens(BabyDuckParser.COMA)
            else:
                return self.getToken(BabyDuckParser.COMA, i)

        def getRuleIndex(self):
            return BabyDuckParser.RULE_declarar_ids

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDeclarar_ids" ):
                listener.enterDeclarar_ids(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDeclarar_ids" ):
                listener.exitDeclarar_ids(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDeclarar_ids" ):
                return visitor.visitDeclarar_ids(self)
            else:
                return visitor.visitChildren(self)




    def declarar_ids(self):

        localctx = BabyDuckParser.Declarar_idsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_declarar_ids)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 69
            self.match(BabyDuckParser.ID)
            self.state = 74
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==22:
                self.state = 70
                self.match(BabyDuckParser.COMA)
                self.state = 71
                self.match(BabyDuckParser.ID)
                self.state = 76
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FuncsContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(BabyDuckParser.ID, 0)

        def PARENTESIS_IZQUIERDO(self):
            return self.getToken(BabyDuckParser.PARENTESIS_IZQUIERDO, 0)

        def PARENTESIS_DERECHO(self):
            return self.getToken(BabyDuckParser.PARENTESIS_DERECHO, 0)

        def LLAVE_IZQUIERDA(self):
            return self.getToken(BabyDuckParser.LLAVE_IZQUIERDA, 0)

        def cuerpo(self):
            return self.getTypedRuleContext(BabyDuckParser.CuerpoContext,0)


        def LLAVE_DERECHA(self):
            return self.getToken(BabyDuckParser.LLAVE_DERECHA, 0)

        def PUNTO_Y_COMA(self):
            return self.getToken(BabyDuckParser.PUNTO_Y_COMA, 0)

        def NULA(self):
            return self.getToken(BabyDuckParser.NULA, 0)

        def tipo(self):
            return self.getTypedRuleContext(BabyDuckParser.TipoContext,0)


        def parametros(self):
            return self.getTypedRuleContext(BabyDuckParser.ParametrosContext,0)


        def vars_(self):
            return self.getTypedRuleContext(BabyDuckParser.VarsContext,0)


        def getRuleIndex(self):
            return BabyDuckParser.RULE_funcs

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFuncs" ):
                listener.enterFuncs(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFuncs" ):
                listener.exitFuncs(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFuncs" ):
                return visitor.visitFuncs(self)
            else:
                return visitor.visitChildren(self)




    def funcs(self):

        localctx = BabyDuckParser.FuncsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_funcs)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 79
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [13]:
                self.state = 77
                self.match(BabyDuckParser.NULA)
                pass
            elif token in [6, 7]:
                self.state = 78
                self.tipo()
                pass
            else:
                raise NoViableAltException(self)

            self.state = 81
            self.match(BabyDuckParser.ID)
            self.state = 82
            self.match(BabyDuckParser.PARENTESIS_IZQUIERDO)
            self.state = 84
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==32:
                self.state = 83
                self.parametros()


            self.state = 86
            self.match(BabyDuckParser.PARENTESIS_DERECHO)
            self.state = 87
            self.match(BabyDuckParser.LLAVE_IZQUIERDA)
            self.state = 89
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==5:
                self.state = 88
                self.vars_()


            self.state = 91
            self.cuerpo()
            self.state = 92
            self.match(BabyDuckParser.LLAVE_DERECHA)
            self.state = 93
            self.match(BabyDuckParser.PUNTO_Y_COMA)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ParametrosContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self, i:int=None):
            if i is None:
                return self.getTokens(BabyDuckParser.ID)
            else:
                return self.getToken(BabyDuckParser.ID, i)

        def DOS_PUNTOS(self, i:int=None):
            if i is None:
                return self.getTokens(BabyDuckParser.DOS_PUNTOS)
            else:
                return self.getToken(BabyDuckParser.DOS_PUNTOS, i)

        def tipo(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(BabyDuckParser.TipoContext)
            else:
                return self.getTypedRuleContext(BabyDuckParser.TipoContext,i)


        def COMA(self, i:int=None):
            if i is None:
                return self.getTokens(BabyDuckParser.COMA)
            else:
                return self.getToken(BabyDuckParser.COMA, i)

        def getRuleIndex(self):
            return BabyDuckParser.RULE_parametros

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterParametros" ):
                listener.enterParametros(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitParametros" ):
                listener.exitParametros(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitParametros" ):
                return visitor.visitParametros(self)
            else:
                return visitor.visitChildren(self)




    def parametros(self):

        localctx = BabyDuckParser.ParametrosContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_parametros)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 95
            self.match(BabyDuckParser.ID)
            self.state = 96
            self.match(BabyDuckParser.DOS_PUNTOS)
            self.state = 97
            self.tipo()
            self.state = 104
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==22:
                self.state = 98
                self.match(BabyDuckParser.COMA)
                self.state = 99
                self.match(BabyDuckParser.ID)
                self.state = 100
                self.match(BabyDuckParser.DOS_PUNTOS)
                self.state = 101
                self.tipo()
                self.state = 106
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class CuerpoContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LLAVE_IZQUIERDA(self):
            return self.getToken(BabyDuckParser.LLAVE_IZQUIERDA, 0)

        def LLAVE_DERECHA(self):
            return self.getToken(BabyDuckParser.LLAVE_DERECHA, 0)

        def estatuto(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(BabyDuckParser.EstatutoContext)
            else:
                return self.getTypedRuleContext(BabyDuckParser.EstatutoContext,i)


        def getRuleIndex(self):
            return BabyDuckParser.RULE_cuerpo

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCuerpo" ):
                listener.enterCuerpo(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCuerpo" ):
                listener.exitCuerpo(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitCuerpo" ):
                return visitor.visitCuerpo(self)
            else:
                return visitor.visitChildren(self)




    def cuerpo(self):

        localctx = BabyDuckParser.CuerpoContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_cuerpo)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 107
            self.match(BabyDuckParser.LLAVE_IZQUIERDA)
            self.state = 111
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 4295036176) != 0):
                self.state = 108
                self.estatuto()
                self.state = 113
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 114
            self.match(BabyDuckParser.LLAVE_DERECHA)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TipoContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ENTERO(self):
            return self.getToken(BabyDuckParser.ENTERO, 0)

        def FLOTANTE(self):
            return self.getToken(BabyDuckParser.FLOTANTE, 0)

        def getRuleIndex(self):
            return BabyDuckParser.RULE_tipo

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTipo" ):
                listener.enterTipo(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTipo" ):
                listener.exitTipo(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitTipo" ):
                return visitor.visitTipo(self)
            else:
                return visitor.visitChildren(self)




    def tipo(self):

        localctx = BabyDuckParser.TipoContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_tipo)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 116
            _la = self._input.LA(1)
            if not(_la==6 or _la==7):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DevuelveContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def DEVOLVER(self):
            return self.getToken(BabyDuckParser.DEVOLVER, 0)

        def PUNTO_Y_COMA(self):
            return self.getToken(BabyDuckParser.PUNTO_Y_COMA, 0)

        def exp(self):
            return self.getTypedRuleContext(BabyDuckParser.ExpContext,0)


        def getRuleIndex(self):
            return BabyDuckParser.RULE_devuelve

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDevuelve" ):
                listener.enterDevuelve(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDevuelve" ):
                listener.exitDevuelve(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDevuelve" ):
                return visitor.visitDevuelve(self)
            else:
                return visitor.visitChildren(self)




    def devuelve(self):

        localctx = BabyDuckParser.DevuelveContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_devuelve)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 118
            self.match(BabyDuckParser.DEVOLVER)
            self.state = 120
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & 30115119104) != 0):
                self.state = 119
                self.exp()


            self.state = 122
            self.match(BabyDuckParser.PUNTO_Y_COMA)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class EstatutoContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(BabyDuckParser.ID, 0)

        def continuacion_de_estatuto_id(self):
            return self.getTypedRuleContext(BabyDuckParser.Continuacion_de_estatuto_idContext,0)


        def condicion(self):
            return self.getTypedRuleContext(BabyDuckParser.CondicionContext,0)


        def ciclo(self):
            return self.getTypedRuleContext(BabyDuckParser.CicloContext,0)


        def imprime(self):
            return self.getTypedRuleContext(BabyDuckParser.ImprimeContext,0)


        def CORCHETE_IZQUIERDO(self):
            return self.getToken(BabyDuckParser.CORCHETE_IZQUIERDO, 0)

        def CORCHETE_DERECHO(self):
            return self.getToken(BabyDuckParser.CORCHETE_DERECHO, 0)

        def estatuto(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(BabyDuckParser.EstatutoContext)
            else:
                return self.getTypedRuleContext(BabyDuckParser.EstatutoContext,i)


        def devuelve(self):
            return self.getTypedRuleContext(BabyDuckParser.DevuelveContext,0)


        def getRuleIndex(self):
            return BabyDuckParser.RULE_estatuto

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterEstatuto" ):
                listener.enterEstatuto(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitEstatuto" ):
                listener.exitEstatuto(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitEstatuto" ):
                return visitor.visitEstatuto(self)
            else:
                return visitor.visitChildren(self)




    def estatuto(self):

        localctx = BabyDuckParser.EstatutoContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_estatuto)
        self._la = 0 # Token type
        try:
            self.state = 138
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [32]:
                self.enterOuterAlt(localctx, 1)
                self.state = 124
                self.match(BabyDuckParser.ID)
                self.state = 125
                self.continuacion_de_estatuto_id()
                pass
            elif token in [8]:
                self.enterOuterAlt(localctx, 2)
                self.state = 126
                self.condicion()
                pass
            elif token in [11]:
                self.enterOuterAlt(localctx, 3)
                self.state = 127
                self.ciclo()
                pass
            elif token in [10]:
                self.enterOuterAlt(localctx, 4)
                self.state = 128
                self.imprime()
                pass
            elif token in [16]:
                self.enterOuterAlt(localctx, 5)
                self.state = 129
                self.match(BabyDuckParser.CORCHETE_IZQUIERDO)
                self.state = 133
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while (((_la) & ~0x3f) == 0 and ((1 << _la) & 4295036176) != 0):
                    self.state = 130
                    self.estatuto()
                    self.state = 135
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 136
                self.match(BabyDuckParser.CORCHETE_DERECHO)
                pass
            elif token in [4]:
                self.enterOuterAlt(localctx, 6)
                self.state = 137
                self.devuelve()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Continuacion_de_estatuto_idContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ASIGNACION(self):
            return self.getToken(BabyDuckParser.ASIGNACION, 0)

        def expresion(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(BabyDuckParser.ExpresionContext)
            else:
                return self.getTypedRuleContext(BabyDuckParser.ExpresionContext,i)


        def PUNTO_Y_COMA(self):
            return self.getToken(BabyDuckParser.PUNTO_Y_COMA, 0)

        def PARENTESIS_IZQUIERDO(self):
            return self.getToken(BabyDuckParser.PARENTESIS_IZQUIERDO, 0)

        def PARENTESIS_DERECHO(self):
            return self.getToken(BabyDuckParser.PARENTESIS_DERECHO, 0)

        def COMA(self, i:int=None):
            if i is None:
                return self.getTokens(BabyDuckParser.COMA)
            else:
                return self.getToken(BabyDuckParser.COMA, i)

        def getRuleIndex(self):
            return BabyDuckParser.RULE_continuacion_de_estatuto_id

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterContinuacion_de_estatuto_id" ):
                listener.enterContinuacion_de_estatuto_id(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitContinuacion_de_estatuto_id" ):
                listener.exitContinuacion_de_estatuto_id(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitContinuacion_de_estatuto_id" ):
                return visitor.visitContinuacion_de_estatuto_id(self)
            else:
                return visitor.visitChildren(self)




    def continuacion_de_estatuto_id(self):

        localctx = BabyDuckParser.Continuacion_de_estatuto_idContext(self, self._ctx, self.state)
